feature(frontend): Add optional component validation on attached files presence
https://jira.railsc.ru/browse/PC4-18261

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,3 +20,4 @@ ru:
           error_messages:
             format_is_invalid: 'Выбран файл некорректного формата'
             size_is_invalid: 'Размер файла превышает %{size}'
+            required_field: 'Не может быть пустым'
