feature(attachments): вынос в гем блока с прикрепленными файлами
https://jira.railsc.ru/browse/ORDERS-567

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,3 +23,5 @@ ru:
             required_field: 'Не может быть пустым'
           titles:
             detach: 'Удалить файл'
+        file_item:
+          title: 'Скачать файл'
